# linux-mcp

./: .gitignore  README.md  config.example.json  pyproject.toml
.codemaker/rules/: 中文.mdc
openspec/changes/archive/2026-05-07-linux-ssh-mcp-server/: design.md  tasks.md
openspec/changes/archive/2026-05-07-multi-server-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-multi-server-support/specs/multi-server-config/: spec.md
openspec/changes/archive/2026-05-07-multi-server-support/specs/server-routing/: spec.md
openspec/changes/archive/2026-05-07-multi-server-support/specs/ssh-connection/: spec.md
openspec/changes/fix-rm-should-use-trash/: design.md  proposal.md  tasks.md
openspec/changes/fix-rm-should-use-trash/specs/command-execution/: spec.md
openspec/changes/key-file-local-resolution/: design.md  proposal.md  tasks.md
openspec/changes/key-file-local-resolution/specs/ssh-connection/: spec.md
openspec/changes/linux-ssh-mcp-server/: proposal.md
openspec/changes/linux-ssh-mcp-server/specs/rollback-execution/: spec.md
openspec/changes/linux-ssh-mcp-server/specs/ssh-connection/: spec.md
openspec/specs/audit-logging/: spec.md
openspec/specs/command-execution/: spec.md
openspec/specs/file-operations/: spec.md
openspec/specs/process-management/: spec.md
openspec/specs/ssh-connection/: spec.md
openspec/specs/system-info/: spec.md
openspec/specs/trash-management/: spec.md
src/linux_ssh_mcp/: __init__.py  __main__.py  audit.py  config.py  safety.py  server.py  ssh_client.py  trash.py
