[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-ssh-mcp"
version = "0.1.0"
description = "MCP server for AI-driven remote Linux management via SSH"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "linux-ssh-mcp contributors"}
]
keywords = ["mcp", "ssh", "linux", "remote-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.0.0",
]

[project.scripts]
linux-ssh-mcp = "linux_ssh_mcp.server:main"

[project.urls]
Homepage = "https://github.com/linux-ssh-mcp/linux-ssh-mcp"
Repository = "https://github.com/linux-ssh-mcp/linux-ssh-mcp"

[tool.setuptools.packages.find]
where = ["src"]
